<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.task.kotlintask.LoginActivit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FFFFFF"
                app:cardCornerRadius="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp">

                    <TextView
                        android:id="@+id/heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/Welcomeback"
                        android:textColor="#000"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/heading_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/desc"
                        android:textColor="#000"
                        android:textSize="16sp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/heading" />

                    <TextView
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:padding="4dp"
                        android:text="@string/enter_email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/heading_login" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:textColorHint="@color/hinttext"
                        android:background="@drawable/edittext_round"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

                    <TextView
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:padding="4dp"
                        android:text="@string/enter_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_email" />

                    <EditText
                        android:id="@+id/et_passowrd"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/edittext_round"
                        android:hint="@string/enter_password"
                        android:textColor="@color/black"
                        android:padding="8dp"
                        android:inputType="textPassword"
                        android:textColorHint="@color/hinttext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

                    <TextView
                        android:id="@+id/txt_forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:padding="4dp"
                        android:text="@string/forget"

                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_passowrd" />

                    <Button
                        android:id="@+id/btnlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/button_round"
                        android:clickable="true"
                        android:enabled="true"
                        android:focusable="true"
                        android:text="Login"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txt_forget" />

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:text="@string/or"
                        android:textColor="#000"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnlogin"
                        app:layout_constraintVertical_bias="0.0" />

                    <LinearLayout
                        android:id="@+id/btnsocial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/white"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/or">

                        <ImageButton
                            android:id="@+id/googlebtn"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/google"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <ImageButton
                            android:id="@+id/btnFacebook"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/facebook"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                        <ImageButton
                            android:id="@+id/btnApple"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:backgroundTint="@color/white"
                            android:src="@drawable/apple"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/heading_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:padding="8dp"
                        android:text="@string/new_account"
                        android:textColor="#000"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnsocial" />

                    <TextView
                        android:id="@+id/txt_signin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:padding="8dp"
                        android:text="@string/Signup"
                        android:textColor="@color/primary"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/heading_signin"
                        app:layout_constraintTop_toBottomOf="@id/btnsocial"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>